untested houghlines and houghcircles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(image_transport REQUIRED)
 find_package(sensor_msgs REQUIRED)
@@ -21,6 +22,49 @@ include_directories(
   ${OpenCV_INCLUDE_DIRS}
 )
 
+#####################
+##  Messages etc.  ##
+#####################
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+  msg/Circle.msg
+  msg/CircleArray.msg
+  msg/CircleArrayStamped.msg
+  msg/Contour.msg
+  msg/ContourArray.msg
+  msg/ContourArrayStamped.msg
+  msg/Face.msg
+  msg/FaceArray.msg
+  msg/FaceArrayStamped.msg
+  msg/Flow.msg
+  msg/FlowArray.msg
+  msg/FlowArrayStamped.msg
+  msg/FlowStamped.msg
+  msg/Line.msg
+  msg/LineArray.msg
+  msg/LineArrayStamped.msg
+  msg/Moment.msg
+  msg/MomentArray.msg
+  msg/MomentArrayStamped.msg
+  msg/Point2D.msg
+  msg/Point2DArray.msg
+  msg/Point2DArrayStamped.msg
+  msg/Point2DStamped.msg
+  msg/Rect.msg
+  msg/RectArray.msg
+  msg/RectArrayStamped.msg
+  msg/RotatedRect.msg
+  msg/RotatedRectArray.msg
+  msg/RotatedRectArrayStamped.msg
+  msg/RotatedRectStamped.msg
+  msg/Size.msg
+  DEPENDENCIES std_msgs sensor_msgs
+)
+
+#############
+##  Build  ##
+#############
+
 set(node_dependencies
   rclcpp
   rclcpp_components
@@ -32,7 +76,7 @@ set(node_dependencies
 )
 
 ## Declare the opencv_apps_ros library
-add_library(${PROJECT_NAME} SHARED
+add_library(${PROJECT_NAME}_node SHARED
     # src/adding_images.cpp
     # src/camshift.cpp
     # src/color_filter.cpp
@@ -48,7 +92,7 @@ add_library(${PROJECT_NAME} SHARED
     # src/find_contours.cpp
     # src/general_contours.cpp
     # src/goodfeature_track.cpp
-    # src/hough_circles.cpp
+    src/hough_circles.cpp
     # src/hough_lines.cpp
     # src/lk_flow.cpp
     src/node.cpp
@@ -65,22 +109,31 @@ add_library(${PROJECT_NAME} SHARED
     # src/watershed_segmentation.cpp
 )
 
-ament_target_dependencies(${PROJECT_NAME} ${node_dependencies})
-target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES})
+ament_target_dependencies(${PROJECT_NAME}_node ${node_dependencies})
+rosidl_get_typesupport_target(cpp_typesupport_target ${PROJECT_NAME} "rosidl_typesupport_cpp")
+target_link_libraries(${PROJECT_NAME}_node ${OpenCV_LIBRARIES} "${cpp_typesupport_target}")
 # prevent pluginlib from using boost
-target_compile_definitions(${PROJECT_NAME} PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
+target_compile_definitions(${PROJECT_NAME}_node PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
 
 
-target_link_libraries(${PROJECT_NAME})
-rclcpp_components_register_node(${PROJECT_NAME}
+target_link_libraries(${PROJECT_NAME}_node)
+rclcpp_components_register_node(${PROJECT_NAME}_node
   PLUGIN "opencv_apps::EdgeDetection"
   EXECUTABLE edge_detection
 )
+rclcpp_components_register_node(${PROJECT_NAME}_node
+  PLUGIN "opencv_apps::HoughCircles"
+  EXECUTABLE hough_circles
+)
+rclcpp_components_register_node(${PROJECT_NAME}_node
+  PLUGIN "opencv_apps::HoughLines"
+  EXECUTABLE hough_lines
+)
 
-install(TARGETS ${PROJECT_NAME}
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION lib
+install(TARGETS ${PROJECT_NAME}_node
+  ARCHIVE DESTINATION lib/${PROJECT_NAME}
+  LIBRARY DESTINATION lib/${PROJECT_NAME}
+  RUNTIME DESTINATION lib/${PROJECT_NAME}
 )
 
 install(DIRECTORY include/
@@ -107,7 +160,7 @@ if(BUILD_TESTING)
 endif()
 
 ament_export_include_directories(include)
-ament_export_libraries(${PROJECT_NAME}_plugins)
+# ament_export_libraries(${PROJECT_NAME}_plugins)
 pluginlib_export_plugin_description_file(${PROJECT_NAME} plugins_description.xml)
 
 ament_package()
