--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   msg/RotatedRectArrayStamped.msg
   msg/RotatedRectStamped.msg
   msg/Size.msg
+  srv/FaceRecognitionTrain.srv
   DEPENDENCIES std_msgs sensor_msgs
 )
 
